--- a/constellatio/notebooks/luis_starter_code2.ipynb
+++ b/constellatio/notebooks/luis_starter_code2.ipynb
@@ -83,7 +83,7 @@
     "import os\n",
     "import sys\n",
     "sys.path.append(os.path.abspath('..'))\n",
-    "from src.data import load_data\n",
+    "from constellatio.data import load_data\n",
     "\n",
     "ts, vs, test = load_data(DATASETSPLIT_PATH, tokenizer, tokenizer_kwargs={'max_length': 21})"
    ]
